<resources>
    <string name="app_name">Projeto Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sair">Sair</string>

    <string name="menu_home">Home</string>
    <string name="menu_cadastro">Cadastro</string>
    <string name="menu_pedaladas">Pedaladas</string>
    <string name="menu_agendamento">Agendamentos</string>
    <string name="menu_milhas">Milhas</string>
    <string name="menu_missao">Missão</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_contato">Sobre</string>
    <string name="menu_redes">Sobre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>